feat: update environment configuration and add superuser creation script for PocketBase

--- a/.example.env
+++ b/.example.env
@@ -1,18 +1,26 @@
-# Environment Variables for Sensitive Data
+# Environment Variables for Self-Hosted Rule 34 App
 # Copy this file to .env and fill in your actual values
 
 # Application Settings
-PORT=8080
-NODE_ENV=development
+NODE_ENV=production
+PORT=
+POCKETBASE_URL=http://pocketbase
 
-# API Configuration
-API_URL=http://localhost:8081
+# PocketBase Settings (for local instance)
+POCKETBASE_ENCRYPTION_KEY=your-super-secret-encryption-key-change-this-to-something-random
+POCKETBASE_PORT=8090
 
-# Matomo Analytics
+# Default Superuser (created automatically on first run)
+POCKETBASE_SUPERUSER_EMAIL=admin@rule34.local
+POCKETBASE_SUPERUSER_PASSWORD=changeme123
+
+# Optional: External API URL (if you want to expose PocketBase externally)
+# API_URL=http://your-server-ip:8090
+
+# Analytics (optional)
 MATOMO_API_KEY=
 
-# Sentry Error Tracking
-# https://sentry.io/
+# Error Tracking (optional)
 SENTRY_DSN=
 SENTRY_ORG=
 SENTRY_PROJECT=
