--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
     container_name: rule34-app
     build: .
     ports:
-      - "${PORT:-3000}:3000"
+      - "${PORT:-3000}:${PORT:-3000}"
     environment:
       - NODE_ENV=production
       - PORT=${PORT:-3000}
-      - POCKETBASE_URL=http://pocketbase:${POCKETBASE_PORT:-8090}
+      - POCKETBASE_URL=http://pocketbase:8089
     depends_on:
       - pocketbase
     restart: unless-stopped
@@ -23,7 +23,7 @@ services:
       - pocketbase_data:/pb_data
       - pocketbase_migrations:/pb_migrations
       - pocketbase_public:/pb_public
-      - automation_tools/create-superuser.sh:/create-superuser.sh
+      - ./automation_tools/create-superuser.sh:/create-superuser.sh
     environment:
       - POCKETBASE_ENCRYPTION_KEY=${POCKETBASE_ENCRYPTION_KEY}
       - POCKETBASE_SUPERUSER_EMAIL=${POCKETBASE_SUPERUSER_EMAIL}
@@ -31,7 +31,8 @@ services:
     restart: unless-stopped
     networks:
       - rule34-network
-    command: sh -c "/create-superuser.sh && /usr/local/bin/pocketbase serve --http=0.0.0.0:8089"
+    entrypoint: ["/bin/sh"]
+    command: ["-c", "chmod +x /create-superuser.sh && /create-superuser.sh && /usr/local/bin/pocketbase serve --http=0.0.0.0:8089"]
 
 volumes:
   pocketbase_data:
